--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dimot_bekalot2">
+    package="com.entryActivities.dimot_bekalot">
 
     <application
         android:allowBackup="true"
@@ -9,14 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dimot_Bekalot2">
-        <activity android:name=".LoginActivity">
+
+        <activity android:name="com.entryActivities.dimot_bekalot.Main_Activity">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-        <activity android:name=".RegisterActivity">
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+        <activity android:name="com.entryActivities.dimot_bekalot.Login_Activity"></activity>
+        <activity android:name="com.entryActivities.dimot_bekalot.Register_Activity"></activity>
     </application>
 
 </manifest>
