--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dimot_Bekalot2">
+        <activity android:name=".entryActivities.Forget_Password_Activity"></activity>
         <activity android:name=".entryActivities.EMail_Verification_Activity" />
         <activity android:name=".entryActivities.login_Verification_Activity" />
         <activity android:name=".connectActivities.Call_To_Institute_Activity" />
-        <activity android:name=".dataObjects.InstituteDataActivity"></activity>
+        <activity android:name=".dataObjects.InstituteDataActivity" />
         <activity android:name=".InstituteActivity.UpdateQueueActivity" />
         <activity android:name=".entryActivities.Register_Institute_Activity" />
         <activity android:name=".entryActivities.Register_Main_Activity" />
         <activity android:name=".InstituteActivity.WatchingQueueActivity" />
-        <activity android:name=".entryActivities.Verification_Activity"></activity>
+        <activity android:name=".entryActivities.Verification_Activity" />
         <activity android:name=".connectActivities.Connect_Activity" />
         <activity android:name=".entryActivities.Main_Activity">
             <intent-filter>
