--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,14 @@
         <activity android:name=".clientActivities.Private_Area" />
         <activity android:name=".clientActivities.queue_search" />
         <activity android:name=".clientActivities.queue_src_res" />
+        <activity android:name=".entryActivities.Login_Verification_Activity" />
         <activity android:name=".connectActivities.Call_To_Institute_Activity" />
         <activity android:name=".dataObjects.Institute_data_activity"></activity>
         <activity android:name=".entryActivities.Register_Institute_Activity" />
         <activity android:name=".entryActivities.Register_Main_Activity" />
         <activity android:name=".InstituteActivity.UpdateQueueActivity"/>
         <activity android:name=".InstituteActivity.AddQueueActivity" />
+        <activity android:name=".InstituteActivity.InstituteMain" />
         <activity android:name=".InstituteActivity.WatchingQueueActivity" />
         <activity android:name=".entryActivities.Main_Activity">
             <intent-filter>
