--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,26 +7,28 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/dimot_bekalot_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dimot_Bekalot2">
+        <activity android:name=".clientActivities.popup_queue_show_res"></activity>
+        <activity android:name=".clientActivities.show_queues_res" />
         <activity android:name=".entryActivities.EMail_Verification_Activity" />
         <activity android:name=".clientActivities.inst_list" />
-        <activity android:name=".clientActivities.Main_Client_View" />
+        <activity android:name=".entryActivities.Main_Activity" />
         <activity android:name=".clientActivities.popup_queue_res" />
         <activity android:name=".clientActivities.Private_Area" />
         <activity android:name=".clientActivities.queue_search" />
         <activity android:name=".clientActivities.queue_src_res" />
         <activity android:name=".entryActivities.login_Verification_Activity" />
         <activity android:name=".connectActivities.Call_To_Institute_Activity" />
-        <activity android:name=".dataObjects.InstituteDataActivity"></activity>
+        <activity android:name=".dataObjects.InstituteDataActivity" />
         <activity android:name=".InstituteActivity.UpdateQueueActivity" />
         <activity android:name=".entryActivities.Register_Institute_Activity" />
         <activity android:name=".entryActivities.Register_Main_Activity" />
         <activity android:name=".InstituteActivity.WatchingQueueActivity" />
-        <activity android:name=".entryActivities.Main_Activity">
+        <activity android:name=".clientActivities.Main_Client_View">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
