--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dimot_Bekalot2">
-        <activity android:name=".clientActivities.popup_queue_show_res"></activity>
+        <activity android:name=".clientActivities.edit_client_det"></activity>
+        <activity android:name=".clientActivities.popup_queue_show_res" />
         <activity android:name=".clientActivities.show_queues_res" />
-        <activity android:name=".entryActivities.Forget_Password_Activity"></activity>
+        <activity android:name=".entryActivities.Forget_Password_Activity" />
         <activity android:name=".entryActivities.EMail_Verification_Activity" />
         <activity android:name=".clientActivities.inst_list" />
-        <activity android:name=".InstituteActivity.InstituteMain" />
+        <activity android:name=".clientActivities.Main_Client_View" />
         <activity android:name=".clientActivities.popup_queue_res" />
         <activity android:name=".clientActivities.Private_Area" />
         <activity android:name=".clientActivities.queue_search" />
@@ -25,13 +26,13 @@
         <activity android:name=".entryActivities.Login_Verification_Activity" />
         <activity android:name=".connectActivities.Call_To_Institute_Activity" />
         <activity android:name=".InstituteActivity.UpdateQueueActivity" />
-        <activity android:name=".dataObjects.Institute_data_activity"></activity>
+        <activity android:name=".dataObjects.Institute_data_activity" />
         <activity android:name=".entryActivities.Register_Institute_Activity" />
         <activity android:name=".entryActivities.Register_Main_Activity" />
-        <activity android:name=".clientActivities.Main_Client_View" />
+        <activity android:name=".entryActivities.Main_Activity" />
         <activity android:name=".InstituteActivity.AddQueueActivity" />
         <activity android:name=".InstituteActivity.WatchingQueueActivity" />
-        <activity android:name=".entryActivities.Main_Activity">
+        <activity android:name=".InstituteActivity.InstituteMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
