--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dimot_Bekalot2">
-        <activity android:name=".ListQueuesInstituteActivity"></activity>
+        <activity android:name=".InstituteActivity.ListQueuesInstituteActivity"></activity>
         <activity android:name=".clientActivities.edit_client_det" />
         <activity android:name=".clientActivities.popup_queue_show_res" />
         <activity android:name=".clientActivities.show_queues_res" />
@@ -30,10 +30,10 @@
         <activity android:name=".dataObjects.Institute_data_activity" />
         <activity android:name=".entryActivities.Register_Institute_Activity" />
         <activity android:name=".entryActivities.Register_Main_Activity" />
-        <activity android:name=".entryActivities.Main_Activity" />
+        <activity android:name=".InstituteActivity.InstituteMain" />
         <activity android:name=".InstituteActivity.AddQueueActivity" />
         <activity android:name=".InstituteActivity.WatchingQueueActivity" />
-        <activity android:name=".InstituteActivity.InstituteMain">
+        <activity android:name=".entryActivities.Main_Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
