--- a/Dimot_Bekalot/app/build.gradle
+++ b/Dimot_Bekalot/app/build.gradle
@@ -39,8 +39,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.5.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+
+    implementation 'com.google.firebase:firebase-messaging:20.1.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
 }
