--- a/Dimot_Bekalot/app/src/main/AndroidManifest.xml
+++ b/Dimot_Bekalot/app/src/main/AndroidManifest.xml
@@ -4,93 +4,77 @@
     package="com.example.dimot_bekalot">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/dimot_bekalot_logo"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dimot_Bekalot2">
-        <activity android:name=".generalActivities.UpdateQueues"></activity>
-        <activity
-            android:name=".clientActivities.edit_client_det"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".clientActivities.show_queues_res"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".entryActivities.Forget_Password_Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".entryActivities.EMail_Verification_Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".InstituteActivity.AddQueueActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".clientActivities.Private_Area"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".clientActivities.queue_search"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".clientActivities.queue_src_res"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".entryActivities.Login_Verification_Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".connectActivities.Call_To_Institute_Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".InstituteActivity.UpdateQueueActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".dataObjects.Institute_data_activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".entryActivities.Register_Institute_Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".entryActivities.Register_Main_Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".entryActivities.Main_Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".InstituteActivity.WatchingQueueActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".InstituteActivity.InstituteMain"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".clientActivities.Main_Client_View"
+        <activity android:name=".clientActivities.edit_client_det"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".clientActivities.show_queues_res"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".entryActivities.Forget_Password_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".entryActivities.EMail_Verification_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".InstituteActivity.AddQueueActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".clientActivities.Private_Area"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".clientActivities.queue_search"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".clientActivities.queue_src_res"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".entryActivities.Login_Verification_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".generalActivities.UpdateQueues"/>
+        <activity android:name=".connectActivities.Call_To_Institute_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".InstituteActivity.UpdateQueueActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".dataObjects.Institute_data_activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".entryActivities.Register_Institute_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".entryActivities.Register_Main_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".InstituteActivity.InstituteMain"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".InstituteActivity.WatchingQueueActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".entryActivities.Main_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".clientActivities.Main_Client_View"
             android:screenOrientation="portrait">
-            <intent-filter>
+                <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".entryActivities.Login_Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".entryActivities.Register_Patient_Activity"
-            android:screenOrientation="portrait" />
+        <activity android:name=".entryActivities.Login_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".entryActivities.Register_Patient_Activity"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <service android:name=".SendNotificationPack.MyFirebaseIdService">
+        <service
+            android:name=".SendNotificationPack.MyFirebaseIdService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
-        <service android:name=".SendNotificationPack.MyFireBaseMessagingService">
+        <service
+            android:name=".SendNotificationPack.MyFireBaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
     </application>
